# Playful

./: .gitignore  CMakeLists.txt  MediaSubscriber.swift  PlayfulPy.ini  PlayfulPy.py  README.md  binding.gyp  config.json  connect.js  functions.py  libMediaSubscriber.dylib  main.js  mediaMiddleman.cc  mediaScripts.js  package-lock.json  package.json  preload.js  qrPreload.js  qrRenderer.js  renderer.js  requirements.txt  sensitive.json  setup.py  utils.js  wdio.conf.js
.github/: FUNDING.yml
.github/workflows/: macos_build_m1.yml  node.js.yml
compiledFunctions/: currentTrack.scpt  getAlbumCoverArt.scpt  launch.scpt  next.scpt  openSpotify.scpt  pause.scpt  play.scpt  previous.scpt  remove_launch.scpt  running.scpt  state.scpt
qrcode/: index.html  styles.css  websocket.html
test/: electron-store.mock.js  test.e2e.js
widget/: index.html  styles.css
